Add tiramisu to index page. Fix formatting

--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -40,5 +40,6 @@
             <li>Let it rest for at least 3 hours before serving.</li>
         </ol>
 
+        <a href="../index.html">Back to index</a>
     </body>
 </html>
