--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/spaghetti-alla-carbonara.html">Spaghetti alla carbonara</a>
+        <ul>
+            <li><a href="recipes/spaghetti-alla-carbonara.html">Spaghetti alla carbonara</a></li>
+            <li><a href="recipes/tiramisu.html">Tiramisu</a></li>
+        </ul>
     </body>
 </html>
