--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpgkqkkeYSppgDVVUV97_k57V5qyZj8ctk2w&usqp=CAU">
         <ul>
             <li><a href="recipes/spaghetti-alla-carbonara.html">Spaghetti alla carbonara</a></li>
             <li><a href="recipes/tiramisu.html">Tiramisu</a></li>
+            <li><a href="recipes/chilli-chicken">Chilli Chicken</a></li>
         </ul>
     </body>
 </html>
