--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="recipes/spaghetti-alla-carbonara.html">Spaghetti alla carbonara</a></li>
             <li><a href="recipes/tiramisu.html">Tiramisu</a></li>
-            <li><a href="recipes/chilli-chicken">Chilli Chicken</a></li>
+            <li><a href="recipes/chilli-chicken.html">Chilli Chicken</a></li>
         </ul>
     </body>
 </html>
