--- a/recipes/chilli-chicken.html
+++ b/recipes/chilli-chicken.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Chilli Chicken</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     
     <body>
