Fixed all links in folder

--- a/recipes/chilli-chicken.html
+++ b/recipes/chilli-chicken.html
@@ -56,6 +56,6 @@
             <li>When you’re ready to serve add the fried chicken pieces to the gravy, stirring well making sure to coat all the pieces with the sauce evenly. Simmer the sauce on a low heat for a minute. Serve warm with some noodles or fried rice with a garnish of green chopped spring onions.</li>
         </ol>
         
-        <a href="../index.html">Back to index</a>
+        <a href="./index.html">Back to index</a>
         </body>
 </html>
