--- a/recipes/index.html
+++ b/recipes/index.html
@@ -7,15 +7,13 @@
     </head>
 
     <body>
-
         <h1>Odin Recipes</h1>
 
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpgkqkkeYSppgDVVUV97_k57V5qyZj8ctk2w&usqp=CAU">
         <ul class="list">
-
-            <li><a href="\\wsl.localhost\Ubuntu\home\zakard\coding\repos\odin-recipes\recipes\spaghetti-alla-carbonara.html">Spaghetti alla carbonara</a></li>
-            <li><a href="\\wsl.localhost\Ubuntu\home\zakard\coding\repos\odin-recipes\recipes\tiramisu.html">Tiramisu</a></li>
-            <li><a href="\\wsl.localhost\Ubuntu\home\zakard\coding\repos\odin-recipes\recipes\chilli-chicken.html">Chilli Chicken</a></li>
+            <li><a href="spaghetti-alla-carbonara.html">Spaghetti alla carbonara</a></li>
+            <li><a href="tiramisu.html">Tiramisu</a></li>
+            <li><a href="chilli-chicken.html">Chilli Chicken</a></li>
         </ul>
     </body>
 </html>
