--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -46,6 +46,6 @@
             <li>Let it rest for at least 3 hours before serving.</li>
         </ol>
 
-        <a href="../index.html">Back to index.</a>
+        <a href="index.html">Back to index.</a>
     </body>
 </html>
